--- a/appointment/index.html
+++ b/appointment/index.html
@@ -12,7 +12,7 @@
     <nobr>
     <div class="wrapper">
         <form method="POST" action="">
-        <center>
+
         <p>Personal Information</p>
         Name:
         <input placeholder="Full Name" name="fname"  type="text">
@@ -25,15 +25,22 @@
         Contact No.:
         <input placeholder="Contact" name="contact" type="number">
         <br><br><br>
+   
         <p>Email Address</p>
                 <div class="emailadd">
-                    Email Address: 
+                    
                     <input placeholder="Email Address" name="emailaddress"  type="text">
                 </div>
                     <br><br><br>
         <p>Services/Type</p>
         Services:
-        <input placeholder="Services" name="services" type="text">
+        <select name="services">
+            <option>HAHAHAHAHA</option>
+            <option>HAHAHAHAHA</option>
+            <option>HAHAHAHAHA</option>
+            <option>HAHAHAHAHA</option>
+            <option>HAHAHAHAHA</option>
+        </select>
         Time:
         <input placeholder="Time" name="time" type="time">
         <br><br><br>
@@ -45,7 +52,7 @@
 
 
 
-        </center>
+       
 
 
 
