--- a/appointment/index.html
+++ b/appointment/index.html
@@ -6,22 +6,47 @@
     <title>Page Title</title>
     
     <link rel='stylesheet' type='text/css' media='screen' href='appointment.css'>
-  
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
     <nobr>
     <div class="wrapper">
         <form method="POST" action="">
-
+             <div class="title">
+                <h2><b>BOOK AN APPOINTMENT</b></h2>
+             </div>
+        <br><br><br>
         <p>Personal Information</p>
         Name:
         <input placeholder="Full Name" name="fname"  type="text">
         Age:
         <input placeholder="Age" name="age"  type="text">
-
-        Gender:
-        <input placeholder="Gender" name="gender"  type="text">
         <br><br><br>
+        Gender:
+        <select name="services">
+            <option>Male</option>
+            <option>Female</option>
+            <option>Transgender</option>
+            <option>Pansexual</option>
+            <option>Lesbian</option>
+            <option>Gay</option>
+            <option>Goldfish</option>
+            <option>Pancake</option>
+            <option>Nuetral</option>
+            <option>Agender</option>
+            <option>Two-spirit</option>
+            <option>Panot gender</option>
+            <option>Kuya Will</option>
+            <option>Ehemexcusemepo</option>
+            <option>Cameraman</option>
+            <option>Questioning</option>
+            <option>Acute Angle</option>
+            <option>Agik</option>
+            <option>Di ako bakla</option>
+            <option>Attack Hellicopter</option>
+            <option>Waltermart</option>
+        </select>
+       
         Contact No.:
         <input placeholder="Contact" name="contact" type="number">
         <br><br><br>
