--- a/appointment/index.html
+++ b/appointment/index.html
@@ -23,7 +23,7 @@
         <input placeholder="Age" name="age"  type="text">
         <br><br><br>
         Gender:
-        <select name="services">
+        <select name="gender">
             <option>Male</option>
             <option>Female</option>
             <option>Transgender</option>
